--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lfg",
-  "version": "1.0.0",
+  "version": "1",
+  "type": "commonjs",
   "scripts": {
     "start": "ts-node src/app.ts",
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
@@ -18,21 +19,29 @@
     "@koa/bodyparser": "^5.1.1",
     "@koa/cors": "^5.0.0",
     "@koa/router": "^12.0.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.2",
     "eslint-plugin-drizzle": "^0.2.3",
+    "joi": "^17.13.3",
     "koa": "^2.15.3",
     "koa-compress": "^5.1.1",
     "koa-helmet": "^7.0.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pino": "^9.3.2",
     "postgres": "^3.4.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/joi": "^17.2.3",
     "@types/koa": "^2.15.0",
     "@types/koa-compress": "^4.0.6",
     "@types/koa__cors": "^5",
     "@types/koa__router": "^12",
     "@types/node": "^22.0.2",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^4",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
     "@typescript-eslint/parser": "^8.0.1",
     "drizzle-kit": "^0.23.2",
