--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "lfg",
-  "version": "1",
+  "version": "1.0",
   "type": "commonjs",
   "scripts": {
     "start": "ts-node src/app.ts",
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/app.ts",
     "build": "tsc",
     "lint": "eslint 'src/**/*.{js,ts}'",
     "db:ui": "yarn drizzle-kit studio",
@@ -27,6 +27,7 @@
     "koa": "^2.15.3",
     "koa-compress": "^5.1.1",
     "koa-helmet": "^7.0.2",
+    "koa-passport": "^6.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pino": "^9.3.2",
@@ -37,6 +38,7 @@
     "@types/joi": "^17.2.3",
     "@types/koa": "^2.15.0",
     "@types/koa-compress": "^4.0.6",
+    "@types/koa-passport": "^6",
     "@types/koa__cors": "^5",
     "@types/koa__router": "^12",
     "@types/node": "^22.0.2",
@@ -48,9 +50,10 @@
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.4"
   }
 }
