--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "koa-compress": "^5.1.1",
     "koa-helmet": "^7.0.2",
     "koa-passport": "^6.0.0",
+    "koa-session": "^6.4.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pino": "^9.3.2",
@@ -39,6 +40,7 @@
     "@types/koa": "^2.15.0",
     "@types/koa-compress": "^4.0.6",
     "@types/koa-passport": "^6",
+    "@types/koa-session": "^6",
     "@types/koa__cors": "^5",
     "@types/koa__router": "^12",
     "@types/node": "^22.0.2",
