--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,12 @@
 PORT=3000
+NODE_ENV=development
+APP_BASE_URL=http://localhost:3000
+
 POSTGRES_URL=
+
+JWT_SECRET=
+SESSION_SECRET=
+
+BREVO_API_KEY=
+USER_ACTION_REQUIRED_TEMPLATE_ID=
+INFORMATION_TEMPLATE_ID=
