--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   },
   "packageManager": "yarn@4.3.1",
   "dependencies": {
+    "@getbrevo/brevo": "^2.2.0",
     "@koa/bodyparser": "^5.1.1",
     "@koa/cors": "^5.0.0",
     "@koa/router": "^12.0.1",
     "bcrypt": "^5.1.1",
+    "dayjs": "^1.11.12",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.2",
     "eslint-plugin-drizzle": "^0.2.3",
