--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "koa-passport": "^6.0.0",
     "koa-session": "^6.4.0",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pino": "^9.3.2",
     "postgres": "^3.4.4"
   },
@@ -49,7 +49,7 @@
     "@types/koa__router": "^12",
     "@types/node": "^22.0.2",
     "@types/passport": "^1.0.16",
-    "@types/passport-jwt": "^4",
+    "@types/passport-local": "^1",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
     "@typescript-eslint/parser": "^8.0.1",
     "drizzle-kit": "^0.23.2",
