--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "types": ["./src/env.d.ts"]
   },
   "exclude": ["node_modules", "dist"]
 }
