--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@getbrevo/brevo": "^2.2.0",
     "@koa/bodyparser": "^5.1.1",
     "@koa/cors": "^5.0.0",
+    "@koa/multer": "^3.0.2",
     "@koa/router": "^12.0.1",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.12",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.2",
     "eslint-plugin-drizzle": "^0.2.3",
+    "firebase": "^10.13.0",
+    "firebase-admin": "^12.3.1",
     "i18n": "^0.15.1",
     "joi": "^17.13.3",
     "koa": "^2.15.3",
@@ -32,10 +35,13 @@
     "koa-helmet": "^7.0.2",
     "koa-passport": "^6.0.0",
     "koa-session": "^6.4.0",
+    "mime-types": "^2.1.35",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pino": "^9.3.2",
-    "postgres": "^3.4.4"
+    "postgres": "^3.4.4",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -46,7 +52,10 @@
     "@types/koa-passport": "^6",
     "@types/koa-session": "^6",
     "@types/koa__cors": "^5",
+    "@types/koa__multer": "^2.0.7",
     "@types/koa__router": "^12",
+    "@types/mime-types": "^2",
+    "@types/multer": "^1",
     "@types/node": "^22.0.2",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1",
