--- a/package.json
+++ b/package.json
@@ -30,15 +30,15 @@
     "firebase-admin": "^12.3.1",
     "i18n": "^0.15.1",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
     "koa-compress": "^5.1.1",
     "koa-helmet": "^7.0.2",
     "koa-passport": "^6.0.0",
-    "koa-session": "^6.4.0",
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
+    "passport-jwt": "^4.0.1",
     "pino": "^9.3.2",
     "postgres": "^3.4.4",
     "sharp": "^0.33.5"
@@ -47,10 +47,10 @@
     "@types/bcrypt": "^5.0.2",
     "@types/i18n": "^0",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9",
     "@types/koa": "^2.15.0",
     "@types/koa-compress": "^4.0.6",
     "@types/koa-passport": "^6",
-    "@types/koa-session": "^6",
     "@types/koa__cors": "^5",
     "@types/koa__multer": "^2.0.7",
     "@types/koa__router": "^12",
@@ -58,7 +58,7 @@
     "@types/multer": "^1",
     "@types/node": "^22.0.2",
     "@types/passport": "^1.0.16",
-    "@types/passport-local": "^1",
+    "@types/passport-jwt": "^4",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
     "@typescript-eslint/parser": "^8.0.1",
     "drizzle-kit": "^0.23.2",
