misc: update .env

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,9 @@ APP_BASE_URL=http://localhost:3000
 
 POSTGRES_URL=
 
-SESSION_SECRET=
+FIREBASE_API_KEY=
+
+JWT_SECRET=
 
 BREVO_API_KEY=
 USER_ACTION_REQUIRED_TEMPLATE_ID=
