--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,15 @@
   "compilerOptions": {
     "target": "ES6",
     "module": "ES6",
+    "moduleResolution": "Node10",
     "strict": true,
+    "noEmit": true,
     "preserveSymlinks": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "declaration": true,
     "rootDir": "./",
     "sourceMap": true,
     "paths": {
