--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "lfg",
   "version": "1.0",
-  "type": "module",
   "scripts": {
     "start": "node dist/app.js",
     "dev": "nodemon",
-    "build": "rollup -c",
+    "build": "rollup -c --bundleConfigAsCjs",
     "lint": "eslint 'src/**/*.{js,ts}'",
     "db:ui": "yarn drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
@@ -21,7 +20,7 @@
     "@koa/cors": "^5.0.0",
     "@koa/multer": "^3.0.2",
     "@koa/router": "^12.0.1",
-    "bcrypt": "^5.1.1",
+    "argon2": "^0.40.3",
     "dayjs": "^1.11.12",
     "drizzle-orm": "^0.32.2",
     "eslint-plugin-drizzle": "^0.2.3",
@@ -43,12 +42,12 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.24.7",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.7",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@types/bcrypt": "^5.0.2",
     "@types/i18n": "^0",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9",
