--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "ES6",
+    "target": "ESNext",
+    "module": "ESNext",
     "moduleResolution": "Node10",
     "strict": true,
-    "noEmit": true,
     "preserveSymlinks": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
