--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "node dist/src/app.js",
     "dev": "nodemon",
     "build": "tsc && tsc-alias",
-    "lint": "eslint 'src/**/*.{js,ts}'",
+    "lint": "eslint 'src/app.ts'",
     "db:ui": "yarn drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "yarn db:generate && drizzle-kit migrate"
@@ -23,7 +23,6 @@
     "argon2": "^0.40.3",
     "dayjs": "^1.11.12",
     "drizzle-orm": "^0.32.2",
-    "eslint-plugin-drizzle": "^0.2.3",
     "firebase": "^10.13.0",
     "firebase-admin": "^12.3.1",
     "i18n": "^0.15.1",
@@ -44,6 +43,8 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.24.7",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.9.0",
     "@types/i18n": "^0",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9",
@@ -58,12 +59,13 @@
     "@types/node": "^22.0.2",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4",
-    "@typescript-eslint/eslint-plugin": "^8.0.1",
-    "@typescript-eslint/parser": "^8.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.2.0",
+    "@typescript-eslint/parser": "^8.2.0",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.23.2",
-    "eslint": "^9.8.0",
+    "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-prettier": "^5.2.1",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
