--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,13 +22,13 @@ jobs:
         node-version: '22'
 
     - name: Install dependencies
-      run: npm install
+      run: yarn install
 
     - name: Run lint
-      run: npm run lint
+      run: yarn lint
 
     - name: Build project
-      run: npm run build
+      run: yarn build
 
     # - name: Deploy to server
     #   env:
