--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,9 @@ jobs:
         node-version: '22'
 
     - name: Install dependencies
-      run: yarn install
+      uses: borales/actions-yarn@v4
+      with:
+        cmd: install # will run `yarn install` command
 
     - name: Run lint
       run: yarn lint
