--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,20 +21,27 @@ jobs:
       with:
         node-version: '22'
 
-    - name: Install dependencies
+    - name: Run install
       uses: borales/actions-yarn@v4
       with:
         cmd: install # will run `yarn install` command
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} # if needed
+    
+    # - name: Build production bundle
+    #   uses: borales/actions-yarn@v4
+    #   with:
+    #     cmd: build # will run `yarn build:prod` command
 
-    - name: Run lint
-      uses: borales/actions-yarn@v4 
-      with: 
-        cmd: lint
-
-    - name: Build project
-      uses: borales/actions-yarn@v4 
-      with: 
-        cmd: lint
+    - name: Run Linting
+      uses: borales/actions-yarn@v4
+      with:
+        cmd: lint 
+      
+    # - name: Build project
+    #   uses: borales/actions-yarn@v4 
+    #   with: 
+    #     cmd: lint
 
     # - name: Deploy to server
     #   env:
