--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,11 +22,7 @@ jobs:
         node-version: '22'
 
     - name: Run install
-      uses: borales/actions-yarn@v4
-      with:
-        cmd: install # will run `yarn install` command
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} # if needed
+      run: corepack enable && yarn set version stable
     
     # - name: Build production bundle
     #   uses: borales/actions-yarn@v4
