--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/app.ts",
     "build": "tsc && tsc-alias",
     "lint": "eslint 'src/app.ts'",
-    "db:ui": "yarn drizzle-kit studio",
+    "db:ui": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "yarn db:generate && drizzle-kit migrate"
   },
