--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,45 +12,46 @@ env:
   DOCKER_IMAGE: ghcr.io/${{ github.repository_owner }}/lfg:latest
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  # build:
+  #   runs-on: ubuntu-latest
 
-    steps:
-      # Step 1: Checkout the code
-      - name: Checkout code
-        uses: actions/checkout@v4
+  #   steps:
+  #     # Step 1: Checkout the code
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      # Step 2: Set up Node.js environment
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22' # Specify your Node.js version
+  #     # Step 2: Set up Node.js environment
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: '22' # Specify your Node.js version
 
-      # Step 3: Set up Yarn v4 (Berry)
-      - name: Set up Yarn v4
-        run: |
-          corepack enable
-          yarn set version latest
+  #     # Step 3: Set up Yarn v4 (Berry)
+  #     - name: Set up Yarn v4
+  #       run: |
+  #         corepack enable
+  #         yarn set version latest
 
-      # Step 4: Cache `node_modules`
-      - name: Cache node_modules
-        uses: actions/cache@v3
-        with:
-          path: |
-            .yarn/cache
-            node_modules
-            dist
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+  #     # Step 4: Cache `node_modules`
+  #     - name: Cache node_modules
+  #       uses: actions/cache@v3
+  #       with:
+  #         # path: |
+  #         #   .yarn/cache
+  #         #   node_modules
+  #         #   dist
+  #         path: dist
+  #         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-yarn-
 
-      # Step 5: Install dependencies using Yarn
-      - name: Install dependencies
-        run: yarn install
+  #     # Step 5: Install dependencies using Yarn
+  #     - name: Install dependencies
+  #       run: yarn install
 
-      # Step 6: Run build (or any other command)
-      - name: Build the project
-        run: yarn build
+  #     # Step 6: Run build (or any other command)
+  #     - name: Build the project
+  #       run: yarn build
 
   deploy:
     runs-on: ubuntu-latest
@@ -91,7 +92,7 @@ jobs:
       
       # Step 5: Set up SSH
       - name: Install SSH Key
-        uses: webfactory/ssh-agent@v0.8.1
+        uses: webfactory/ssh-agent@0.9.0
         with:
           ssh-private-key: ${{ secrets.SSH_KEY }}
 
