--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -91,10 +91,10 @@ jobs:
           tags: $DOCKER_IMAGE
       
       # Step 5: Set up SSH
-      - name: Install SSH Key
-        uses: webfactory/ssh-agent@0.9.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_KEY }}
+      # - name: Install SSH Key
+      #   uses: webfactory/ssh-agent@0.9.0
+      #   with:
+      #     ssh-private-key: ${{ secrets.SSH_KEY }}
 
       # Step 6: Deploy Docker image to EC2
       - name: Deploy to EC2
@@ -102,7 +102,10 @@ jobs:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
         run: |
-          ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
+          echo "${{ secrets.EC2_SSH_KEY }}" > id_rsa
+          chmod 600 id_rsa
+
+          ssh -i id_rsa -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
             # Pull the latest Docker image
             docker pull $DOCKER_IMAGE
             
