--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,9 +8,6 @@ on:
     branches:
       - master
 
-env: 
-  DOCKER_IMAGE: ghcr.io/${{ github.repository_owner }}/lfg:latest
-
 jobs:
   # build:
   #   runs-on: ubuntu-latest
@@ -57,6 +54,9 @@ jobs:
     runs-on: ubuntu-latest
     # needs: build # Ensures `test` runs after `build`
 
+    env: 
+      DOCKER_IMAGE: ghcr.io/${{ github.repository_owner }}/lfg:latest
+
     steps:
       # Step 1: Checkout the code
       - name: Checkout code
@@ -88,7 +88,8 @@ jobs:
         with:
           context: .
           push: true
-          tags: $DOCKER_IMAGE
+          tags: ${{ env.DOCKER_IMAGE }}
+
       
       # Step 5: Set up SSH
       # - name: Install SSH Key
@@ -101,6 +102,7 @@ jobs:
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
+          DOCKER_IMAGE: ${{ env.DOCKER_IMAGE }}
         run: |
           echo "${{ secrets.EC2_SSH_KEY }}" > id_rsa
           chmod 600 id_rsa
