--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -57,14 +57,12 @@ jobs:
     env: 
       DOCKER_IMAGE: ghcr.io/${{ github.repository_owner }}/lfg:latest
 
+    permissions: write-all
+
     steps:
       # Step 1: Checkout the code
       - name: Checkout code
         uses: actions/checkout@v4
-
-      # Step 2: Set up Docker Buildx (for building images)
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
 
       # Step 4: Restore the cache from the build job
       - name: Restore dist cache
@@ -73,6 +71,10 @@ jobs:
           path: dist
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: ${{ runner.os }}-yarn-
+
+      # Step 2: Set up Docker Buildx (for building images)
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       # Step 3: Log in to GitHub Container Registry
       - name: Log in to GitHub Container Registry
