--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,47 +9,6 @@ on:
       - master
 
 jobs:
-  # build:
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     # Step 1: Checkout the code
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-
-  #     # Step 2: Set up Node.js environment
-  #     - name: Set up Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: '22' # Specify your Node.js version
-
-  #     # Step 3: Set up Yarn v4 (Berry)
-  #     - name: Set up Yarn v4
-  #       run: |
-  #         corepack enable
-  #         yarn set version latest
-
-  #     # Step 4: Cache `node_modules`
-  #     - name: Cache node_modules
-  #       uses: actions/cache@v3
-  #       with:
-  #         # path: |
-  #         #   .yarn/cache
-  #         #   node_modules
-  #         #   dist
-  #         path: dist
-  #         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-yarn-
-
-  #     # Step 5: Install dependencies using Yarn
-  #     - name: Install dependencies
-  #       run: yarn install
-
-  #     # Step 6: Run build (or any other command)
-  #     - name: Build the project
-  #       run: yarn build
-
   deploy:
     runs-on: ubuntu-latest
     # needs: build # Ensures `test` runs after `build`
@@ -57,20 +16,13 @@ jobs:
     env: 
       DOCKER_IMAGE: ghcr.io/${{ github.repository_owner }}/lfg:latest
 
-    permissions: write-all
+    permissions: 
+      packages: write
 
     steps:
       # Step 1: Checkout the code
       - name: Checkout code
         uses: actions/checkout@v4
-
-      # Step 4: Restore the cache from the build job
-      - name: Restore dist cache
-        uses: actions/cache@v4
-        with:
-          path: dist
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: ${{ runner.os }}-yarn-
 
       # Step 2: Set up Docker Buildx (for building images)
       - name: Set up Docker Buildx
@@ -106,7 +58,7 @@ jobs:
           EC2_USER: ${{ secrets.EC2_USER }}
           DOCKER_IMAGE: ${{ env.DOCKER_IMAGE }}
         run: |
-          echo "${{ secrets.EC2_SSH_KEY }}" > id_rsa
+          echo "${{ secrets.SSH_KEY }}" > id_rsa
           chmod 600 id_rsa
 
           ssh -i id_rsa -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
