--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -56,9 +56,10 @@ jobs:
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
+          SSH_KEY: ${{ secrets.SSH_KEY }}
           DOCKER_IMAGE: ${{ env.DOCKER_IMAGE }}
         run: |
-          echo "${{ secrets.SSH_KEY }}" > id_rsa
+          echo $SSH_KEY > id_rsa
           chmod 600 id_rsa
 
           ssh -i id_rsa -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
