--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -47,7 +47,7 @@ jobs:
       
       # Step 5: Set up SSH
       - name: Install SSH Key
-        uses: webfactory/ssh-agent@0.9.0
+        uses: webfactory/ssh-agent
         with:
           ssh-private-key: ${{ secrets.SSH_KEY }}
 
