--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,12 +37,12 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       # Step 4: Build and Push Docker Image to GitHub Container Registry
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ${{ env.DOCKER_IMAGE }}
+      # - name: Build and push Docker image
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     context: .
+      #     push: true
+      #     tags: ${{ env.DOCKER_IMAGE }}
 
       
       # Step 5: Set up SSH
@@ -59,10 +59,8 @@ jobs:
           SSH_KEY: ${{ secrets.SSH_KEY }}
           DOCKER_IMAGE: ${{ env.DOCKER_IMAGE }}
         run: |
-          echo $SSH_KEY > id_rsa
-          chmod 600 id_rsa
-
-          cat id_rsa
+          echo $SSH_KEY > "id_rsa";
+          chmod 600 id_rsa;
 
           ssh -i id_rsa -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
             # Pull the latest Docker image
