--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -75,7 +75,7 @@ jobs:
 
       - name: Deploy to my EC2 instance
         uses: appleboy/ssh-action@master
-        env:
+        with:
           host: ${{ secrets.HOST }}  
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.SSH_KEY }}
