--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -76,7 +76,7 @@ jobs:
       - name: Deploy to my EC2 instance
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.HOST }}  
+          host: 15.236.35.177
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.SSH_KEY }}
           script: |
