--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,11 +26,11 @@ jobs:
 
       # Step 2: Set up Docker Buildx (for building images)
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v4
 
       # Step 3: Log in to GitHub Container Registry
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v4
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -76,8 +76,8 @@ jobs:
       - name: Deploy to my EC2 instance
         uses: appleboy/ssh-action@master
         with:
-          host: 15.236.35.177
-          username: ${{ secrets.EC2_USER }}
+          host: ${{ env.EC2_HOST }}
+          username: ec2-user
           key: ${{ secrets.SSH_KEY }}
           script: |
             # Pull the latest Docker image
