--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -76,11 +76,13 @@ jobs:
       - name: Deploy to my EC2 instance
         uses: appleboy/ssh-action@master
         env:
-          HOST: ${{ env.EC2_HOST }}
+          HOST: ${{ secrets.EC2_HOST }}
+          USER: ${{ secrets.EC2_USER }}
+          KEY: ${{ secrets.SSH_KEY }}
         with:
           host: $HOST
-          username: ec2-user
-          key: ${{ secrets.SSH_KEY }}
+          username: $USER
+          key: $KEY
           script: |
             # Pull the latest Docker image
             docker pull $DOCKER_IMAGE
