--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -52,39 +52,20 @@ jobs:
       #     ssh-private-key: ${{ secrets.SSH_KEY }}
 
       # Step 6: Deploy Docker image to EC2
-      # - name: Deploy to EC2
-      #   env:
-      #     EC2_HOST: ${{ secrets.EC2_HOST }}
-      #     EC2_USER: ${{ secrets.EC2_USER }}
-      #     SSH_KEY: ${{ secrets.SSH_KEY }}
-      #     DOCKER_IMAGE: ${{ env.DOCKER_IMAGE }}
-      #   run: |
-      #     echo $SSH_KEY > "id_rsa";
-      #     chmod 600 id_rsa;
-
-      #     ssh -i id_rsa -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
-      #       # Pull the latest Docker image
-      #       docker pull $DOCKER_IMAGE
-            
-      #       # Stop and remove any existing container
-      #       docker rm -f lfg || true
-            
-      #       # Run the new container
-      #       docker run -d --name lfg -p 80:3000 $DOCKER_IMAGE
-      #     EOF
-
-      - name: Deploy to my EC2 instance
-        uses: appleboy/ssh-action@master
+      - name: Deploy to EC2
         env:
-          HOST: ${{ secrets.EC2_HOST }}
-          USER: ${{ secrets.EC2_USER }}
-          KEY: ${{ secrets.SSH_KEY }}
-        run: echo $HOST
-        with:
-          host: $HOST
-          username: $USER
-          key: $KEY
-          script: |
+        #     HOST: ${{ secrets.EC2_HOST }}
+        #     USER: ${{ secrets.EC2_USER }}
+        #     KEY: ${{ secrets.SSH_KEY }}
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+          EC2_USER: ${{ secrets.EC2_USER }}
+          SSH_KEY: ${{ secrets.SSH_KEY }}
+          DOCKER_IMAGE: ${{ env.DOCKER_IMAGE }}
+        run: |
+          echo $SSH_KEY > "id_rsa";
+          chmod 600 id_rsa;
+
+          ssh -i id_rsa -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
             # Pull the latest Docker image
             docker pull $DOCKER_IMAGE
             
@@ -93,3 +74,25 @@ jobs:
             
             # Run the new container
             docker run -d --name lfg -p 80:3000 $DOCKER_IMAGE
+          EOF
+
+      # - name: Deploy to my EC2 instance
+      #   uses: appleboy/ssh-action@master
+      #   env:
+      #     HOST: ${{ secrets.EC2_HOST }}
+      #     USER: ${{ secrets.EC2_USER }}
+      #     KEY: ${{ secrets.SSH_KEY }}
+      #   run: echo $HOST
+      #   with:
+      #     host: $HOST
+      #     username: $USER
+      #     key: $KEY
+      #     script: |
+      #       # Pull the latest Docker image
+      #       docker pull $DOCKER_IMAGE
+            
+      #       # Stop and remove any existing container
+      #       docker rm -f lfg || true
+            
+      #       # Run the new container
+      #       docker run -d --name lfg -p 80:3000 $DOCKER_IMAGE
