--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,12 +11,12 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    # needs: build # Ensures `test` runs after `build`
 
     env: 
       DOCKER_IMAGE: ghcr.io/${{ github.repository_owner }}/lfg:latest
 
     permissions: 
+      contents: read
       packages: write
 
     steps:
@@ -73,21 +73,22 @@ jobs:
       #       docker run -d --name lfg -p 80:3000 $DOCKER_IMAGE
       #     EOF
 
-      - name: Deploy to my EC2 instance
-        env:
-          KEY: ${{ env.SSH_KEY }}
-        run: echo $KEY >> id_rsa
-              
+      - name: Print Environment Variables
+        run: |
+          echo "HOST is set to ${{ secrets.EC2_HOST }}"
+          echo "USER is set to ${{ secrets.EC2_USER }}"
+          echo "KEY length is ${#secrets.SSH_KEY}"  # Just to verify length
+
       - name: Deploy to my EC2 instance
         uses: appleboy/ssh-action@master
         env:
-          HOST: ${{ env.EC2_HOST }}
-          USER: ${{ env.EC2_USER }}
-          KEY: ${{ env.SSH_KEY }}
+          HOST: ${{ secrets.EC2_HOST }}
+          USER: ${{ secrets.EC2_USER }}
+          KEY: ${{ secrets.SSH_KEY }}
         with:
           host: $HOST
           username: $USER
-          key_path: ./id_rsa
+          key: $KEY
           script: |
             # Pull the latest Docker image
             docker pull $DOCKER_IMAGE
