--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,9 +15,9 @@ jobs:
     env: 
       DOCKER_IMAGE: ghcr.io/${{ github.repository_owner }}/lfg:latest
 
-    permissions: 
-      contents: read
-      packages: write
+    permissions: "write-all"
+      # contents: read
+      # packages: write
 
     steps:
       # Step 1: Checkout the code
@@ -77,7 +77,6 @@ jobs:
         run: |
           echo "HOST is set to ${{ secrets.EC2_HOST }}"
           echo "USER is set to ${{ secrets.EC2_USER }}"
-          echo "KEY length is ${#secrets.SSH_KEY}"  # Just to verify length
 
       - name: Deploy to my EC2 instance
         uses: appleboy/ssh-action@master
