--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,9 +16,23 @@ jobs:
       DOCKER_IMAGE: ghcr.io/${{ github.repository_owner }}/lfg:latest
 
     permissions: 
-      contents: read
+
+      
+      actions: write
+      attestations: write
+      checks: write
+      contents: write
+      deployments: write
+      discussions: write
+      id-token: write
+      issues: write
+      metadata: write
       packages: write
-      actions: read
+      pages: write
+      pull-requests: write
+      repository-projects: write
+      security-events: write
+      statuses: write
       # contents: read
       # packages: write
 
