--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -57,7 +57,9 @@ jobs:
           echo $SSH_KEY > id_rsa.pem
           chmod 600 id_rsa.pem
 
-          ssh -i id_rsa -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
+          cat id_rsa.pem
+
+          ssh -i id_rsa.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
             # Pull the latest Docker image
             docker pull $DOCKER_IMAGE
             
