--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -51,7 +51,7 @@ jobs:
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
-          SSH_KEY: ${{ secrets.SSH_KEY }}
+          SSH_KEY: ${{ env.SSH_KEY }}
           DOCKER_IMAGE: ${{ env.DOCKER_IMAGE }}
         run: |
           echo $SSH_KEY > id_rsa.pem
