--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -47,11 +47,25 @@ jobs:
 
 
       # Step 6: Deploy Docker image to EC2
+      - name: Add SSH key
+        env:
+            SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+        run: |
+          mkdir -p /home/runner/.ssh
+          # Replace example.com with the hostname of the machine
+          # you're SSH-ing into
+          ssh-keyscan example.com >> /home/runner/.ssh/known_hosts
+          echo "${{ secrets.SSH_KEY }}" > /home/runner/.ssh/github_actions
+          chmod 600 /home/runner/.ssh/github_actions
+          ssh-agent -a $SSH_AUTH_SOCK > /dev/null	
+          ssh-add /home/runner/.ssh/github_actions
+
       - name: Deploy to EC2
         env:
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
-          SSH_KEY: ${{ env.SSH_KEY }}
+          # SSH_KEY: ${{ env.SSH_KEY }}
           DOCKER_IMAGE: ${{ env.DOCKER_IMAGE }}
         run: |
           echo $SSH_KEY > id_rsa.pem
@@ -59,7 +73,7 @@ jobs:
 
           cat id_rsa.pem
 
-          ssh -i id_rsa.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
+          ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
             # Pull the latest Docker image
             docker pull $DOCKER_IMAGE
             
