--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -80,10 +80,10 @@ jobs:
             echo $DOCKER_IMAGE
           
             # Pull the latest Docker image
-            docker pull ghcr.io/lfgappeu/lfg-api:latest
+            docker pull ghcr.io/lfgappeu/lfg:latest
             
             # Stop and remove any existing container
             docker rm -f lfg || true
             
             # Run the new container
-            docker run -d --name lfg -p 80:3000 ghcr.io/lfgappeu/lfg-api:latest
+            docker run -d --name lfg -p 80:3000 ghcr.io/lfgappeu/lfg:latest
