--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lfg",
   "version": "1.0",
   "scripts": {
-    "start": "node src/app.js",
+    "start": "node app.js",
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/app.ts",
     "build": "tsc && tsc-alias",
     "lint": "eslint 'src/app.ts'",
