--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,18 @@
     "baseUrl": "./",
     "rootDir": "./",
     "sourceMap": true,
+
     "paths": {
       "@/*": ["src/*"]
     },
-    "types": ["./src/env.d.ts"]
+
+    "types": ["./src/env.d.ts"],
+    "inlineSources": true,
+
+    // Set `sourceRoot` to  "/" to strip the build path prefix
+    // from generated source code references.
+    // This improves issue grouping in Sentry.
+    "sourceRoot": "/"
   },
   "exclude": ["node_modules", "dist"]
 }
