--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ESNext",
     "module": "CommonJS",
     "moduleResolution": "Node10",
+    "resolveJsonModule": true,
     "strict": true,
     "preserveSymlinks": true,
     "esModuleInterop": true,
